[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "network_flow_tracker"
version = "0.1.0"
description = "Particle tracking in spatial networks"
readme = "README.MD"
license = { file = "LICENSE" }
authors = [{ name = "Xiang Ji" }]
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.12.1", 
    "numba>=0.60.0", 
    "numpy>=1.24.3,<2.0", 
    "pandas>=2.0.1", 
    "scikit-image>=0.24.0", 
    "scikit-learn>=1.2.2", 
    "scipy>=1.10.1", 
    "simpleitk>=2.4.0", 
    "tifffile>=2024.8.30", 
    "matplotlib",
    "networkx>=3.2.1", 
    "trackpy @ https://github.com/xiangjiph/trackpy/archive/refs/tags/v0.6.4.zip", 
]

[project.optional-dependencies]
notebook = [
  "jupyter",
  "seaborn",
  "tqdm", 
]

[project.urls]
Homepage = "https://github.com/xiangjiph/NetworkFlowTracker"
Issues = "https://github.com/xiangjiph/NetworkFlowTracker/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]